--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ wp-config.php
 # htaccess
 /.htaccess
 
+# DS_Store
+.DS_Store
+
 # All plugins
 #
 # Note: If you wish to whitelist plugins,
@@ -46,3 +49,9 @@ wp-config.php
 # Note: If you wish to whitelist themes,
 # uncomment the next line
 #/wp-content/themes
+
+# All plugins
+#
+# Note: If you wish to whitelist plugins,
+# uncomment the next line
+#/wp-content/plugins
